--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-* {
+* { 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-:root {   
-
-  max-height: 400px;
-  overflow-y: auto; /* Enable vertical scrolling */
+:root {
+  max-height: 100vh;
   margin: 0;
   padding: 0; 
   font-style: oblique;
